[gd_scene load_steps=2 format=3 uid="uid://bjs6ip7m2o4ar"]

[ext_resource type="Script" path="res://Cards/hand.gd" id="1_cmarj"]

[node name="Hand" type="Node2D"]
script = ExtResource("1_cmarj")

[node name="Card1" type="Marker2D" parent="."]
position = Vector2(-64, 0)
rotation = 0.785398

[node name="Card2" type="Marker2D" parent="."]
position = Vector2(-32, 0)
rotation = 0.523599

[node name="Card3" type="Marker2D" parent="."]
position = Vector2(32, 0)

[node name="Card4" type="Marker2D" parent="."]
position = Vector2(64, 0)
rotation = -0.261799

[node name="Card5" type="Marker2D" parent="."]
position = Vector2(96, 0)
rotation = -0.523599

[node name="Card6" type="Marker2D" parent="."]
rotation = 0.261799
